css/style.css
html {
  width: 100%;
  /* height: 100%; */
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}

body {
  width: 100vw;
  min-height: 1000px;
  height: 100%;
  margin: 0 auto;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.5vw;
  background: rgb(148, 152, 182);
  background: radial-gradient(
    circle,
    rgba(148, 152, 182, 1) 0%,
    rgba(145, 149, 178, 1) 13%,
    rgba(136, 139, 166, 1) 27%,
    rgba(66, 65, 71, 1) 100%
  );
  color: whitesmoke;
  overflow-x: hidden;
}

.search-bar {
  background-color: mediumslateblue;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: start;
  margin: 0 auto;
}

.search-bar.sticky {
  position: fixed;
  margin-bottom: 3%;
  top: 0;
  overflow: hidden;
  z-index: 1;
}

.search-bar > h1 {
  text-align: center;
  display: block;
  margin: 1% auto;
  width: 20%;
}

form {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  width: 80%;
}

form > input {
  display: block;
  width: 70%;
  margin-right: 5%;
  font-size: 1.5vw;
}

form > button {
  display: block;
  font-size: 2vw;
  border-radius: 10px;
  background-color: transparent;
  color: rgb(255, 255, 255);
}

.container {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  position: relative;
  padding: 50px;
  margin-top: 5%;
}

.lyrics {
  display: flex;
  flex-flow: row nowrap;
  width: 100%;
}

.general-search-result {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 65%;
  margin: 5% auto;
  cursor: pointer;
}

.general-search-result:hover {
  box-shadow: 0 0 10px 10px rgba(192, 192, 192, 0.548);
}

a {
  text-decoration: none;
  color: whitesmoke;
}

img {
  display: block;
  width: 200px;
  height: 200px;
}

.lyrics-body {
  width: 48%;
}

.about-info {
  width: 48%;
}

.about-info img {
  margin: 0 auto;
}

.song-title {
  font-weight: bold;
  padding-bottom: 2%;
}

ul {
  list-style: none;
  padding-left: 0;
}

iframe {
  width: 300px;
  height: 300px;
}

